[workspace]
members = [
    "aoc-2018",
    "aoc-2019",
    "aoc-2020",
    "aoc-2021",
    "aoc-2022",
    "aoc-2023",
    "aoc-2024",
    "aoc-2025",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.41", features = ["clock"] }
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
eqsolver = "0.3.0"
evalexpr = "13.1.0"
fixedbitset = "0.5.7"
futures = "0.3.31"
good_lp = { version = "1.14.2", default-features = false, features = ["minilp"] }
my_lib = { git = "https://github.com/DrFlowerkick/mylib", branch = "main" }
#my_lib = { path = "../mylib" }
nalgebra = "0.34.1"
num = "0.4.1"
num-bigint = "0.4.6"
num-traits = "0.2.19"
petgraph = "0.8.3"
ratatui = "0.29.0"
regex = "1.11.1"
rustworkx-core = "0.17.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.109"
tokio = { version = "1.40.0", features = ["full"] }
