[package]
name = "aoc-2019"
version = "0.1.0"
edition = "2024"

[features]
default = ["short-run-time"]
short-run-time = []
long-run-time = []
all = ["short-run-time", "long-run-time"]

[dependencies]
anyhow = { workspace = true }
my_lib = { workspace = true }
num-bigint = "0.4.6"
num-traits = "0.2.19"
petgraph = "0.8.2"
