[package]
name = "aoc-2019"
version = "0.1.0"
edition = "2024"
default-run = "main"


[features]
default = ["short-run-time"]
short-run-time = []
long-run-time = []
all = ["short-run-time", "long-run-time"]

[dependencies]
anyhow = { workspace = true }
my_lib = { workspace = true }
num-bigint = "0.4.6"
num-traits = "0.2.19"
petgraph = "0.8.2"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
chrono = { version = "0.4.42", features = ["clock"] }
