[package]
name = "aoc-2019"
version = "0.1.0"
edition = "2024"
default-run = "main"

[features]
default = ["short-run-time"]
short-run-time = []
long-run-time = []
all = ["short-run-time", "long-run-time"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
color-eyre.workspace = true
crossterm.workspace = true
futures.workspace = true
my_lib.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
petgraph.workspace = true
ratatui.workspace = true
tokio.workspace = true
