[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2024"

[features]
default = ["short-run-time"]
short-run-time = []
long-run-time = []
all = ["short-run-time", "long-run-time"]

[dependencies]
anyhow = { workspace = true }
my_lib = { workspace = true }
fixedbitset = "0.5.7"
petgraph = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
