[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2024"

[features]
default = ["short-run-time"]
short-run-time = []
long-run-time = []
all = ["short-run-time", "long-run-time"]

[dependencies]
anyhow.workspace = true
fixedbitset.workspace = true
my_lib.workspace = true
petgraph.workspace = true
serde.workspace = true
