[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["short-run-time"]
short-run-time = []
long-run-time = []
all = ["short-run-time", "long-run-time"]

[dependencies]
anyhow = { workspace = true }
my_lib = { workspace = true }
evalexpr = "11.3.0"
num = "0.4.1"
petgraph = "0.6.4"
