[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["short-run-time"]
short-run-time = []
long-run-time = []
all = ["short-run-time", "long-run-time"]

[dependencies]
anyhow = { workspace = true }
my_lib = { workspace = true }
eqsolver = "0.1.3"
nalgebra = "0.32.3"
num = "0.4.1"
rustworkx-core = "0.13.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.109"
