[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["short-run-time"]
short-run-time = []
long-run-time = []
all = ["short-run-time", "long-run-time"]

[dependencies]
anyhow.workspace = true
eqsolver.workspace = true
my_lib.workspace = true
num.workspace = true
rustworkx-core.workspace = true
serde.workspace = true
serde_json.workspace = true
